--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.21.1",
     "dotenv": "^8.2.0",
+    "firebase": "^9.9.0",
     "grade-js": "^1.0.10",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-firebase-hooks": "^5.0.3",
     "react-flip-move": "^3.0.4",
     "react-redux": "^7.2.1",
     "react-router-dom": "^6.3.0",
