--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
-  "name": "vusic",
-  "homepage": "http://vusic.techstore.dev/",
+  "name": "supertonic",
+  "homepage": "",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.56",
+    "@reduxjs/toolkit": "^1.8.3",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
@@ -18,7 +19,7 @@
     "react-dom": "^16.13.1",
     "react-firebase-hooks": "^5.0.3",
     "react-flip-move": "^3.0.4",
-    "react-redux": "^7.2.1",
+    "react-redux": "^7.2.8",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^4.0.3",
     "redux": "^4.0.5",
