--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Vusic",
-  "name": "Vusic | The music destination you want.",
+  "short_name": "supertonic",
+  "name": "supertonic | The music destination you want.",
   "icons": [
     {
       "src": "favicon.ico",
